Fixed issue with text alignment

--- a/styles.css
+++ b/styles.css
@@ -268,6 +268,10 @@ header a:active {
         width: 90%;
         margin-top: 10px;
     }
+
+    .description-header .title {
+        text-align: center;
+    }
 }
 
 @media only screen and (min-width: 961px) {
